# esp-aws-iot-for-fleet-provisioning

./: .gitmodules  README.md
examples/fleet_prov_by_claim/: CMakeLists.txt  sdkconfig.defaults
examples/fleet_prov_by_claim/main/: CMakeLists.txt  demo_config.h  fleet_prov_demo_core_mqtt.c  pkcs11_operations.c
examples/fleet_prov_by_claim_pkcs11/: CMakeLists.txt  sdkconfig.defaults
examples/fleet_prov_by_claim_pkcs11/main/: CMakeLists.txt  demo_config.h  fleet_prov_by_claim_demo.c  fleet_prov_demo_helpers.c  fleet_prov_demo_helpers.h  fleet_provisioning_serializer.c  pkcs11_operations.c  pkcs11_operations.h
examples/fleet_prov_simple/: CMakeLists.txt  sdkconfig.defaults
examples/fleet_prov_simple/main/: demo_config.h  fleet_provisioning_serializer.c  fleet_provisioning_serializer.h  shadow_demo_helpers.c  shadow_demo_helpers.h  shadow_demo_main.c
examples/fleet_prov_simple/main/certs/: client.crt  client.key
examples/fleet_prov_simple_nvs/: sdkconfig.defaults
examples/fleet_prov_simple_nvs/main/: CMakeLists.txt  app_main.c  shadow_demo_helpers.c  shadow_demo_helpers.h  shadow_demo_main.c
libraries/Fleet-Provisioning-for-AWS-IoT-embedded-sdk/: CMakeLists.txt
libraries/Fleet-Provisioning-for-AWS-IoT-embedded-sdk/config/: fleet_provisioning_config.h
platform/posix/: CMakeLists.txt
